--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ CHANNEL_ID=your_channel_id_here
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # Bot Configuration
-BOT_PREFIX=!
+BOT_PREFIX=
 MAX_MESSAGE_LENGTH=2000
